updated homepage color

--- a/static/home.html
+++ b/static/home.html
@@ -1,1 +1,22 @@
-gt
+<!DOCTYPE html>
+<html>
+<head>
+    <title> SmartApps Recommender </title>
+    <meta name="description" contect="SmartApps POC on Vertex AI">
+    <style>
+        #gradient {
+        height: 500000px;
+        background-color: black;/* For browsers that do not support gradients */
+        background-image: linear-gradient(to right, #3d3d3d, #141414);
+        }
+    </style>
+</head>
+
+
+<body>
+<div id="gradient">  <!-- Entire page color with gradient -->
+    <h1 style="color:white;"> Movie Recommender using the Keras Model</h1>
+</div>
+</body>
+</html>
+
